Fix search button alignment: reset margin and vertical-align

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -1060,6 +1060,8 @@ div.help p {
   box-sizing: border-box;
   font-size: 16px;
   height: 32px;
+  margin: 0;
+  vertical-align: middle;
 }
 .search-input {
   flex: 1;
